// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/index.vue should be rendered correctly 1`] = `
<v-container-stub
  data-page-index=""
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <form
        class="v-form"
        novalidate="novalidate"
      >
        <div>
          <v-card-stub
            loaderheight="4"
            tag="div"
          >
            <v-row-stub
              class="pt-6"
              justify="center"
              tag="div"
            >
              <v-img-stub
                maxwidth="30%"
                options="[object Object]"
                position="center center"
                src="/images/login-logo.png"
                transition="fade-transition"
              />
            </v-row-stub>
            <v-card-text-stub
              tag="div"
            >
              <div
                data-email=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                      >
                        <svg
                          aria-hidden="true"
                          class="v-icon__svg"
                          role="img"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          メールアドレス
                        </label>
                        <input
                          autofocus="autofocus"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-password=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                      >
                        <svg
                          aria-hidden="true"
                          class="v-icon__svg"
                          role="img"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          パスワード
                        </label>
                        <input
                          type="password"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <button
                            aria-label="append icon"
                            class="v-icon notranslate v-icon--link theme--light"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="v-icon__svg"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M2,5.27L3.28,4L20,20.72L18.73,22L15.65,18.92C14.5,19.3 13.28,19.5 12,19.5C7,19.5 2.73,16.39 1,12C1.69,10.24 2.79,8.69 4.19,7.46L2,5.27M12,9A3,3 0 0,1 15,12C15,12.35 14.94,12.69 14.83,13L11,9.17C11.31,9.06 11.65,9 12,9M12,4.5C17,4.5 21.27,7.61 23,12C22.18,14.08 20.79,15.88 19,17.19L17.58,15.76C18.94,14.82 20.06,13.54 20.82,12C19.17,8.64 15.76,6.5 12,6.5C10.91,6.5 9.84,6.68 8.84,7L7.3,5.47C8.74,4.85 10.33,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C12.69,17.5 13.37,17.43 14,17.29L11.72,15C10.29,14.85 9.15,13.71 9,12.28L5.6,8.87C4.61,9.72 3.78,10.78 3.18,12Z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <input
                        aria-checked="false"
                        data-remember-me=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      ログインしたままにする
                    </label>
                  </div>
                </div>
              </div>
              <!---->
            </v-card-text-stub>
            <v-card-actions-stub
              class="pa-4"
              tag="div"
            >
              <a
                block=""
                class="v-btn-stub"
                color="primary"
                depressed=""
                type="submit"
              >
                <span>
                  ログイン
                </span>
              </a>
            </v-card-actions-stub>
            <v-card-actions-stub
              class="pa-4"
              tag="div"
            >
              <a
                block=""
                class="v-btn-stub"
                color="secondary"
                nuxt=""
                text=""
                to="/password-resets/new"
              >
                <span>
                  パスワードをお忘れですか？
                </span>
              </a>
            </v-card-actions-stub>
          </v-card-stub>
        </div>
      </form>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`pages/index.vue submit should run validation 1`] = `
<v-container-stub
  data-page-index=""
  fill-height=""
  tag="div"
>
  <v-row-stub
    aligncontent="center"
    justify="center"
    nogutters="true"
    tag="div"
  >
    <v-col-stub
      cols="12"
      lg="4"
      md="5"
      sm="8"
      tag="div"
      xl="3"
    >
      <form
        class="v-form"
        novalidate="novalidate"
      >
        <div>
          <v-card-stub
            loaderheight="4"
            tag="div"
          >
            <v-row-stub
              class="pt-6"
              justify="center"
              tag="div"
            >
              <v-img-stub
                maxwidth="30%"
                options="[object Object]"
                position="center center"
                src="/images/login-logo.png"
                transition="fade-transition"
              />
            </v-row-stub>
            <v-card-text-stub
              tag="div"
            >
              <div
                data-email=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                      >
                        <svg
                          aria-hidden="true"
                          class="v-icon__svg"
                          role="img"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          メールアドレス
                        </label>
                        <input
                          autofocus="autofocus"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-password=""
              >
                <div
                  class="v-input v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <span
                        aria-hidden="true"
                        class="v-icon notranslate theme--light"
                      >
                        <svg
                          aria-hidden="true"
                          class="v-icon__svg"
                          role="img"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          パスワード
                        </label>
                        <input
                          type="password"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <button
                            aria-label="append icon"
                            class="v-icon notranslate v-icon--link theme--light"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="v-icon__svg"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M2,5.27L3.28,4L20,20.72L18.73,22L15.65,18.92C14.5,19.3 13.28,19.5 12,19.5C7,19.5 2.73,16.39 1,12C1.69,10.24 2.79,8.69 4.19,7.46L2,5.27M12,9A3,3 0 0,1 15,12C15,12.35 14.94,12.69 14.83,13L11,9.17C11.31,9.06 11.65,9 12,9M12,4.5C17,4.5 21.27,7.61 23,12C22.18,14.08 20.79,15.88 19,17.19L17.58,15.76C18.94,14.82 20.06,13.54 20.82,12C19.17,8.64 15.76,6.5 12,6.5C10.91,6.5 9.84,6.68 8.84,7L7.3,5.47C8.74,4.85 10.33,4.5 12,4.5M3.18,12C4.83,15.36 8.24,17.5 12,17.5C12.69,17.5 13.37,17.43 14,17.29L11.72,15C10.29,14.85 9.15,13.71 9,12.28L5.6,8.87C4.61,9.72 3.78,10.78 3.18,12Z"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
                      />
                      <input
                        aria-checked="false"
                        data-remember-me=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                    </div>
                    <label
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      ログインしたままにする
                    </label>
                  </div>
                </div>
              </div>
              <!---->
            </v-card-text-stub>
            <v-card-actions-stub
              class="pa-4"
              tag="div"
            >
              <a
                block=""
                class="v-btn-stub"
                color="primary"
                depressed=""
                type="submit"
              >
                <span>
                  ログイン
                </span>
              </a>
            </v-card-actions-stub>
            <v-card-actions-stub
              class="pa-4"
              tag="div"
            >
              <a
                block=""
                class="v-btn-stub"
                color="secondary"
                nuxt=""
                text=""
                to="/password-resets/new"
              >
                <span>
                  パスワードをお忘れですか？
                </span>
              </a>
            </v-card-actions-stub>
          </v-card-stub>
        </div>
      </form>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;
